[project]
name = "apus"
version = "0.1.0"
description = "APUS is a set of modules for building a Data Platform"
authors = [
    { name = "Vitaliy Boyarsky", email = "boyarsky.vitaliy@live.com" },
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-subtests==0.15.0",
    "ruff==0.14.10",
    "pre-commit==4.3.0",
    "setuptools==80.9.0"
]

[tool.uv.workspace]
members = [
    "apus-shared",
    "apus-api",
]
