[project]
name = "apus-api"
version = "0.1.0"
description = "API Gateway for APUS"
requires-python = "==3.9.*"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.39.0",
    "python-forge==18.6.0",
    "datamodel-code-generator==0.44.0",
    "apus_shared",
]

[tool.uv.sources]
apus_shared = { workspace = true }

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
