[project]
name = "apus-cli"
version = "0.1.0"
description = "CLI for APUS deployment"
requires-python = "==3.9.*"
dependencies = [
    "typer-slim==0.21.1",
    "pyyaml==6.0.3",
    "aws-cdk-lib==2.233.0",
    "apus-api",
    "apus-shared",
]

[tool.uv.sources]
apus-api = { workspace = true }
apus-shared = { workspace = true }

[project.scripts]
apus = "apus_cli.main:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
