[project]
name = "apus-cli"
version = "0.1.0"
description = "CLI for APUS deployment"
requires-python = "==3.9.*"
dependencies = [
    "typer-slim==0.21.1",
    "pyyaml==6.0.3",
    "aws-cdk-lib==2.233.0",
]

[optional-dependencies]
workspace = [
    "apus-api",
    "apus-monitoring",
    "apus-shared",
]

[tool.uv.sources]
apus-api = { workspace = true }
apus-monitoring = { workspace = true }
apus-shared = { workspace = true }

[project.scripts]
apus = "apus_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/apus_cli",
    "lib/apus_shared",
    "lib/apus_api",
    "lib/apus_monitoring",
]
