[project]
name = "apus-cli"
version = "0.1.0"
description = "CLI for APUS deployment"
requires-python = ">=3.9.0"
dependencies = [
    "pydantic==2.10.6",
    "typer-slim==0.21.1",
    "pyyaml==6.0.3",
    "boto3==1.42.19",
    "aws-cdk-lib==2.233.0",
    "aws-croniter==1.0.5",
]

[tool.uv.sources]
apus-api = { workspace = true }
apus-monitoring = { workspace = true }
apus-shared = { workspace = true }

[project.scripts]
apus = "apus_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/apus_cli",
    "lib/apus_shared",
    "lib/apus_api",
    "lib/apus_monitoring",
]
