[project]
name = "apus-shared"
version = "0.1.0"
description = "Reusable code for APUS"
requires-python = "==3.9.*"
dependencies = [
    "pydantic==2.12.5",
    "pyxis",
    "snowflake-sqlalchemy==1.8.2"
]

[tool.uv.sources]
pyxis = { git = "https://github.com/vitalibo/pyxis.git", tag = "0.2.8-pyspark" }

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
