[project]
name = "apus-shared"
version = "0.1.0"
description = "Reusable code for APUS"
requires-python = "==3.9.*"
dependencies = [
    "pyxis",
    "pydantic==2.10.6",
    "sqlalchemy==2.0.45",
    "snowflake-sqlalchemy==1.8.2"
]

[dependency-groups]
dev = [
    "aws-cdk-lib==2.233.0",
    "aws-croniter==1.0.5",
]

[tool.uv.sources]
pyxis = { url = "https://github.com/vitalibo/pyxis/archive/refs/tags/0.2.10-pyspark.zip" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
